--- a/PROYECT-8.ipynb
+++ b/PROYECT-8.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "***Context*** \n",
     "\n",
-    "You have done very well in the TripleTen course, and you have been offered an internship in the analytical department of Y.Afisha. Your first task is to help optimize marketing expenses.\n",
+    "You have been offered an internship in the analytical department of Y.Afisha. Your first task is to help optimize marketing expenses.\n",
     "\n",
     "***What you have:***\n",
     "   \n",
